syntax = "proto3";

package myblog.api.proto.blog;

import "proto/blog/post.proto";

// The blog service definition.
service BlogService {
  rpc ListPublishedPosts (ListPublishedPostsRequest) returns (ListPublishedPostsResponse);
}

message ListPublishedPostsRequest {
  uint32 offset = 1;
  uint32 limit  = 2;
}

message ListPublishedPostsResponse {
  repeated Post posts = 1;
}